# christmas-lights

./: .gitignore  Cargo.toml  build.sh  deploy.sh
command/: Cargo.toml
command/src/: lib.rs
render_engine/: Cargo.toml
render_engine/src/: fixedcolor.rs  lib.rs  octograms.rs  render.rs  renderbuffer.rs  shaders.rs  transition.rs  vec.rs
rp2040/: Cargo.toml  rust-toolchain.toml
rp2040/.cargo/: config.toml
rp2040/src/: main.rs  renderer.rs  statusled.rs  wifi.rs  ws2812.rs
rpi4/: Cargo.toml
rpi4/src/: main.rs
simulator/: Cargo.toml  build.sh
simulator/src/: main.rs
src/: main.rs
streamer/: Cargo.toml
streamer/src/: main.rs  stream_frame.rs
web/: index.html
