workspace = { members = ["render_engine"] }
[package]
name = "led_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
render_engine = { path = "./render_engine" }
