[package]
name = "christmas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
fixed = "1.28.0"
fixed-macro = "1.2"


embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-81920",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "integrated-timers",
] }
embassy-sync = { version = "0.6.1" }
embassy-time = { version = "0.3.2" }
embassy-futures = { version = "0.1.0" }
embassy-hal-internal = { version = "0.2.0" }
embassy-embedded-hal = { version = "0.2.0" }
embassy-rp = { version = "0.2.0", features = [
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
smart-leds = "0.4.0"
critical-section = "1.2.0"
pio-proc = "0.2"
pio = "0.2.1"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
smart-leds-matrix = "0.2.0"
embedded-graphics-core = "0.4.0"
smart-leds-trait = "0.2.1"
render_engine = { path = "../render_engine" }

[features]
default = ["defmt"]
defmt = [
    "embassy-rp/defmt",
    "embassy-embedded-hal/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
]
critical-section-impl = ["critical-section/restore-state-u8"]
