[package]
name = "christmas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
fixed = "1.28.0"
fixed-macro = "1.2"
portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"] }
static_cell = "2.1.0"


embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-81920",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
#    "integrated-timers",
] }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0" }
embassy-futures = { version = "0.1.0" }
embassy-hal-internal = { version = "0.2.0" }
embassy-embedded-hal = { version = "0.3.0" }
embassy-rp = { version = "0.3.0", features = [
    "rp2040",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.6.0", features = [
    "tcp",
#    "udp",
#    "raw",
    "dhcpv4",
    "medium-ethernet",
#    "dns",
    "proto-ipv4",
#    "proto-ipv6",
    "multicast"
] }

cyw43 = "0.3.0"
cyw43-pio = "0.3.0"


smart-leds = "0.4.0"
critical-section = "1.2.0"
pio-proc = "0.2"
pio = "0.2.1"
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
smart-leds-matrix = "0.2.0"
embedded-graphics-core = "0.4.0"
smart-leds-trait = "0.2.1"
render_engine = { path = "../render_engine", features = ["serde"]}
rand = { version = "0.8.5", default-features = false }
rand_core = "0.6.4"
embedded-io-async = { version = "0.6.1" }

command = { version = "0.1.0", path = "../command" }
minicbor = "0.25.1"
minicbor-serde = "0.3.2"
serde = { version = "1.0.217", default-features = false }


[features]
default = ["defmt"]
defmt = [
    "embassy-rp/defmt",
    "embassy-embedded-hal/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-net/defmt",
    "embedded-io-async/defmt-03",
]
critical-section-impl = ["critical-section/restore-state-u8"]


[profile.release]
debug = 2

[patch.crates-io]
embassy-executor = { path="/home/matt/projects/embassy/embassy-executor" }
embassy-sync = { path="/home/matt/projects/embassy/embassy-sync"}
embassy-time = { path="/home/matt/projects/embassy/embassy-time" }
embassy-futures = { path="/home/matt/projects/embassy/embassy-futures" }
embassy-hal-internal = { path="/home/matt/projects/embassy/embassy-hal-internal" }
embassy-embedded-hal = { path="/home/matt/projects/embassy/embassy-embedded-hal" }
embassy-rp = { path="/home/matt/projects/embassy/embassy-rp" }
embassy-net = { path="/home/matt/projects/embassy/embassy-net"}
cyw43 = { path="/home/matt/projects/embassy/cyw43" }
cyw43-pio = { path="/home/matt/projects/embassy/cyw43-pio" }
