[package]
name = "led_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1.2.1"
bevy = { version = "0.15.0", features = ["bevy_dev_tools"] }
render_engine = { path = "../render_engine" }
